# a-rust-project-about-drones

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/examples/config/: base.toml
backend/src/: lib.rs  main.rs  web-server.rs
backend/src/network/: main.rs  message.rs  message_constructor.rs  mod.rs  network_discovery_protocol.rs  packet_sender.rs
backend/src/network_initializer/: config.rs  main.rs  mod.rs
backend/src/server/: communication_server.rs  content_server.rs  main.rs  mod.rs
backend/src/simulation_controller/: main.rs
backend/src/utils/: main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  TopologyVisualizer.tsx  main2.tsx
frontend/src/components/custom/: NodeDetailsSidebar.tsx
frontend/src/components/custom/config-button/: ConfigButton.tsx  ConfigPopup.tsx
frontend/src/components/custom/control-bar/: ControlBar.tsx  ControlButton.tsx
frontend/src/components/custom/help-button/: HelpButton.tsx  HelpModal.tsx
frontend/src/components/custom/logs-button/: LogsButton.tsx  LogsSidebar.tsx
frontend/src/components/custom/message/: MessageForm.tsx
frontend/src/components/custom/toolbar/: NodeTypeButton.tsx  NodeTypeMenu.tsx  PopupArrow.tsx  SendMessageMenu.tsx  SpecificNodeButton.tsx  SpecificNodeMenu.tsx  ToolButton.tsx  Toolbar.tsx
frontend/src/components/custom/topology-visualizer/: CytoscapeContainer.tsx  TopologyVisualizer.tsx  api.ts  messageApi.ts  types.ts  useCytoscapeEvents.ts  useCytoscapeEvents.tsx
frontend/src/components/ui/: theme-toggle.tsx  toolbar.tsx  topology-visualizer.tsx
frontend/src/hooks/: useToolbar.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx
frontend/src/stores/: tool-store.ts  toolbarStore.ts
